// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The SearchTab component renders correctly on first load 1`] = `
<div>
  <div
    style="display: flex; height: 4vh; font-size: 36px; margin-bottom: 20px;"
  >
    <input
      placeholder="Type to search..."
      style="font-size: 36px; padding-left: 2vw;"
      type="text"
    />
    <input
      style="width: 8vh; font-size: 36px;"
      type="button"
      value="Search"
    />
  </div>
  <div
    style="font-size: 48px; text-align: center;"
  >
    Please type something in the search bar to begin.
  </div>
</div>
`;

exports[`The SearchTab component renders correctly with no results 1`] = `
<div>
  <div
    style="display: flex; height: 4vh; font-size: 36px; margin-bottom: 20px;"
  >
    <input
      placeholder="Type to search..."
      style="font-size: 36px; padding-left: 2vw;"
      type="text"
    />
    <input
      style="width: 8vh; font-size: 36px;"
      type="button"
      value="Search"
    />
  </div>
  <div
    style="font-size: 48px; text-align: center; margin-bottom: 80px;"
  >
    Now showing results for "
    String that doesn't exist in results
    "
  </div>
  <div>
    <div
      style="display: flex; align-items: center; justify-content: space-around; font-size: 36px; width: 100%; text-align: center; margin-bottom: 20px;"
    >
      <div
        title="SONGS"
      >
        <span>
          SONGS
        </span>
        <div
          style="width: 100%; height: 8px; background-color: black; position: relative; left: 0px; margin-top: 8px; transition: all 0.5s ease;"
        />
      </div>
      <div
        title="ARTISTS"
      >
        <span>
          ARTISTS
        </span>
        <div
          style="width: 0px; height: 8px; background-color: black; position: relative; left: 0px; margin-top: 8px; transition: all 0.5s ease;"
        />
      </div>
      <div
        title="ALBUMS"
      >
        <span>
          ALBUMS
        </span>
        <div
          style="width: 0px; height: 8px; background-color: black; position: relative; left: 0px; margin-top: 8px; transition: all 0.5s ease;"
        />
      </div>
      <div
        title="PLAYLISTS"
      >
        <span>
          PLAYLISTS
        </span>
        <div
          style="width: 0px; height: 8px; background-color: black; position: relative; left: 0px; margin-top: 8px; transition: all 0.5s ease;"
        />
      </div>
    </div>
    <div
      style="overflow-y: scroll; height: 100%;"
    >
      <div
        style="font-size: 48px; text-align: center;"
      >
        Sorry no songs have been found for your current search.
      </div>
    </div>
  </div>
</div>
`;

exports[`The SearchTab component renders correctly with results 1`] = `
<div>
  <div
    style="display: flex; height: 4vh; font-size: 36px; margin-bottom: 20px;"
  >
    <input
      placeholder="Type to search..."
      style="font-size: 36px; padding-left: 2vw;"
      type="text"
    />
    <input
      style="width: 8vh; font-size: 36px;"
      type="button"
      value="Search"
    />
  </div>
  <div
    style="font-size: 48px; text-align: center; margin-bottom: 80px;"
  >
    Now showing results for "
    Creative
    "
  </div>
  <div>
    <div
      style="display: flex; align-items: center; justify-content: space-around; font-size: 36px; width: 100%; text-align: center; margin-bottom: 20px;"
    >
      <div
        title="SONGS"
      >
        <span>
          SONGS
        </span>
        <div
          style="width: 100%; height: 8px; background-color: black; position: relative; left: 0px; margin-top: 8px; transition: all 0.5s ease;"
        />
      </div>
      <div
        title="ARTISTS"
      >
        <span>
          ARTISTS
        </span>
        <div
          style="width: 0px; height: 8px; background-color: black; position: relative; left: 0px; margin-top: 8px; transition: all 0.5s ease;"
        />
      </div>
      <div
        title="ALBUMS"
      >
        <span>
          ALBUMS
        </span>
        <div
          style="width: 0px; height: 8px; background-color: black; position: relative; left: 0px; margin-top: 8px; transition: all 0.5s ease;"
        />
      </div>
      <div
        title="PLAYLISTS"
      >
        <span>
          PLAYLISTS
        </span>
        <div
          style="width: 0px; height: 8px; background-color: black; position: relative; left: 0px; margin-top: 8px; transition: all 0.5s ease;"
        />
      </div>
    </div>
    <div
      style="overflow-y: scroll; height: 100%;"
    >
      <div
        style="margin-top: 80px;"
      >
        <div
          style="display: block;"
        >
          <div
            style="font-size: 48px; margin: 40px 0px;"
          >
            <svg
              aria-hidden="true"
              class="svg-inline--fa fa-play fa-w-14 "
              data-icon="play"
              data-prefix="fas"
              focusable="false"
              role="img"
              style="margin-left: 8px; margin-right: 40px;"
              viewBox="0 0 448 512"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M424.4 214.7L72.4 6.6C43.8-10.3 0 6.1 0 47.9V464c0 37.5 40.7 60.1 72.4 41.3l352-208c31.4-18.5 31.5-64.1 0-82.6z"
                fill="currentColor"
              />
            </svg>
            Play all
          </div>
          <div
            style="width: 100%; display: flex; align-items: center; font-size: 48px; padding: 2vh 0px;"
          >
            <div
              style="width: 57px; height: auto; padding-right: 32px;"
            />
            <div>
              <div
                style="font-size: 48px;"
              >
                Creative Minds
              </div>
              <div
                style="font-size: 36px;"
              >
                Benjamin Tissot, BenSound
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
